apps/base/nginx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: nginx
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - x.relyq.dev
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: nginx
          kind: Service
          port: 80
